[gd_scene load_steps=5 format=3 uid="uid://cfst6x46yaxhv"]

[ext_resource type="Script" uid="uid://b5dc5diro5arx" path="res://scripts/levelcomtempo/levelcomtempo.gd" id="1_y2prq"]
[ext_resource type="PackedScene" uid="uid://dm0nv7mdhpm30" path="res://scenes/recycle_bin/recycle_bin.tscn" id="2_lrtyt"]
[ext_resource type="PackedScene" uid="uid://cju2hkmd3d61g" path="res://scenes/trash/trash.tscn" id="3_o1vev"]
[ext_resource type="PackedScene" uid="uid://oyjy8ja3pii5" path="res://scenes/inventario/inventario_level_com_tempo.tscn" id="4_lrtyt"]

[node name="levelcomtempo" type="Node2D"]
script = ExtResource("1_y2prq")

[node name="Timer_do_jogo" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="Background" type="TextureRect" parent="."]
offset_right = 972.0
offset_bottom = 2127.0
scale = Vector2(0.4, 0.4)

[node name="Recycle_bin" parent="." instance=ExtResource("2_lrtyt")]

[node name="Trash" parent="." instance=ExtResource("3_o1vev")]

[node name="LabelTempo" type="Label" parent="."]
offset_left = 148.0
offset_top = 31.0
offset_right = 250.0
offset_bottom = 54.0
text = "TEMPO:"

[node name="inventario_tempo" parent="." instance=ExtResource("4_lrtyt")]
